--- a/package.json
+++ b/package.json
@@ -7,8 +7,17 @@
   },
   "devDependencies": {
     "@types/node": "^13.7.0",
+    "@types/webpack": "^4.41.6",
+    "clean-webpack-plugin": "^3.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "image-config-webpack-plugin": "^1.4.0",
     "parcel-bundler": "^1.12.4",
     "prettier": "^1.19.1",
-    "typescript": "^3.7.5"
+    "scss-config-webpack-plugin": "^1.4.0",
+    "ts-config-webpack-plugin": "^1.4.0",
+    "typescript": "^3.7.5",
+    "webpack": "^4.41.6",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   }
 }
