--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "parcel index.html"
+    "dev": "webpack-dev-server",
+    "build": "NODE_ENV=production webpack"
   },
   "devDependencies": {
     "@types/node": "^13.7.0",
